<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CrossFitr</string>
    <string name="main_title">Crossfitr</string>  
    <string name="list_of_workout_title">Workouts</string>
    <string name="wod_label">Workout of the Day</string>
    <string name="girl_label">Girl Workouts</string>
    <string name="hero_label">Hero Workouts</string>
    <string name="all_label">All Workouts</string>
    <string name="custom_label">Custom Workouts</string>
    <string name="custom_Add_label">Custom Add Page</string>
    <string name="user_label">User Profile</string>
    <string name="edit_profile_label">Edit Profile</string>
    <string name="delete_profile_label">Delete Profile</string> 
    <string name="achievement_label">Achievements</string> 
    <string name="workout_name">Workout</string>
    <string name="timer_tab_label">Timer Tab</string>
    <string name="timer_label">Timer</string>
    <string name="tabata_label">Tabata</string>
    <string name="stopwatch_label">Stopwatch</string>
    <string name="start_label">Start</string>
    <string name="stop_label">Stop</string>
    <string name="reset_stopwatch_label">Reset Stopwatch</string>
    <string name="reset_tabata_label">Reset Tabata</string>
    <string name="finish_label">Finish Workout</string>
    <string name="timerset_label">Set Timer</string>
    <string name="workoutdes_default_label">Workout Description</string>
    <string name="workoutstate_default_label">Press To Start</string>
 
   
    <!-- Strings for CustomActivity relations -->
    <string name="name_of_workout_add">Name of Workout</string>
    <string name="description_of_workout_add">Description of Workout</string>
	<string name="workout_type_add">Workout Type</string>
	<string name="add_to_custom_label">Will add to Custom Workouts List</string>
	<string name="record_type_add">Record Type</string>
	<string name="add_custom_add">Add Custom Workout</string>
	<string name="button_save_add">Save</string>
	<string name="button_start_add">Save and Start Workout</string>
	
	<!--  Strings used in workout profile(description page) -->
	<string name="button_begin_workout">Begin Workout</string>
	<string name="workout_profile_title">Workout Profile</string>
	<string name="description_header">Description</string>
	<string name="record_type_header">Record Type</string>
	<string name="record_header">Personal Record: </string>
	
	<!--  Strings used in results page -->
	<string name="button_sav_workout">End Session</string>
	<string name="button_dontsav_workout">Don\'t Save and End</string>
	<string name="button_share_workout_fb">Share on Facebook</string> 
	<string name="results_title">Results</string>
	<string name="results_description_header">Description</string>
	<string name="results_record_type_header">Record Type</string>
	<string name="results_record_header">Personal Record</string>
	<string name="results_time_header">Your Time</string>
	<string name="comment_field_header">Comments(Optional):</string>
	
	<!-- Strings for user profile. -->
	<string name="user_name">Name</string>
	<string name="user_bmi">BMI:</string>
	<string name="user_height">Height(in):</string>
	<string name="user_weight">Current Weight(lbs):</string>
	<string name="user_goal_weight">Goal Weight(lbs):</string>
	<string name="user_total_workouts">Total Workouts:</string>
	<string name="user_last_workout">Last Workout:</string>
	<string name="user_total_achievements">Total Achievements:</string>
	<string name="click_change">(Click to Change)</string>
	
	<string name="button_edit_profile">Edit Profile</string>
	<string name="button_injuries">Injuries</string>
	<string name="button_achievements">Achievements</string>
	<string name="button_save_profile">Save</string>
	<string name="button_cancel_profile">Cancel</string>
	
	<!-- Strings for custom timer popup. -->
	<string name="dialog_set_number">Set</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_picker_title">Set Timer</string>
    
 	<!-- Strings for Calendar -->
  	<string name="CList">Calendar_listhelper</string>
  	<string name="Cmain">Calendar_main</string>
  	<string name="sun" >sun\u0020\u0020\u0020\u0020\u0020</string>
  	<string name="mon_thru_fri" >mon\u0020\u0020\u0020\u0020tue\u0020\u0020\u0020\u0020wed\u0020\u0020\u0020
							    \u0020thu\u0020\u0020\u0020\u0020\u0020fri\u0020\u0020\u0020\u0020\u0020\u0020</string>
  	<string name="sat">sat</string>
  	
  	<!-- Strings for Achievements -->
  	<string name="achievements">Achievements</string>

	
</resources>
