<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/cal_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseheader" />
    <ImageView
        android:id="@+id/user_pic_button"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_gravity="center"
        android:src="@drawable/user_pic" />
    
    <TextView
        android:id="@+id/click_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/click_change"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/user_bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_bmi"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/user_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_weight"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/user_goal_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_goal_weight"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/user_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_height"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/user_total_workouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_total_workouts"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/user_last_workout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_last_workout"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/user_total_achievements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_total_achievements"
        android:textSize="20dp" />

    <Button
        android:id="@+id/edit_profile_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_edit_profile" />

    <Button
        android:id="@+id/injuries_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_injuries" />

    <Button
        android:id="@+id/achievements_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_achievements" />

</LinearLayout>