<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:background="@drawable/home"
android:layout_height="fill_parent"
android:layout_width="fill_parent"
android:padding="5dip"
android:orientation="horizontal" 
>
<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="24.5sp"
        android:text="@string/name_of_workout_add" />

<Button
    	android:id="@+id/button_workout_form_save"
    	android:layout_width="50dp"
    	android:layout_height="80dp"
    	android:layout_gravity="center"
    	android:layout_marginBottom="10dp" 
    	android:text="@string/button_save_add"/>

<Button
    	android:id="@+id/button_workout_form_start"
    	android:layout_width="50dp"
    	android:layout_height="80dp"
    	android:layout_gravity="center"
    	android:layout_marginBottom="10dp" 
    	android:text="@string/button_start_add"
    	/>


</LinearLayout>