<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/calendar_background"
	android:id = "@+id/calendar_bg">
	<ImageView
			android:id="@+id/cal_header"
			android:src="@drawable/baseheader"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
		</ImageView>

	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<ImageView
			android:id="@+id/preMonth"
			android:src="@drawable/calendar_leftarrow"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
		</ImageView>
		<Button
			android:id="@+id/currentMonth"
			android:layout_weight="0.6"
			android:textColor="#FFFFFF"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:background="@drawable/calendar_bar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
		</Button>
		<ImageView
			android:id="@+id/nextMonth"
			android:src="@drawable/calendar_rightarrow"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
		</ImageView>
	</LinearLayout>

   <RelativeLayout
        android:id="@+id/calendarheader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/calendar_header"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/calendarHeaderText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
     
            android:layout_alignParentTop="true"
            android:text="@string/sun"
            android:textColor="@color/weekendBlue"
			android:layout_marginLeft="-15dp"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/calendarHeaderText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
			android:layout_toRightOf="@+id/calendarHeaderText1"
			android:textStyle="bold" 
            android:text="@string/mon_thru_fri"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/calendarHeaderText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/calendarHeaderText2"
			android:textStyle="bold" 
            android:text="@string/sat"
            android:textColor="@color/weekendBlue"
            android:textSize="17sp" />
    </RelativeLayout>
    
	<GridView
		android:id="@+id/calendargrid"
		android:numColumns="7"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
	</GridView>
		<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<ImageView
			android:src="@drawable/calendar_listheader"
			android:layout_gravity="center"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
		</ImageView>

		<ListView
		  android:id="@+id/calendar_listView"
		  android:layout_width="match_parent"
		  android:layout_height="match_parent">		    
		</ListView>		    
		
		</LinearLayout>
</LinearLayout>
